Updated the Website and added my image.

--- a/index.html
+++ b/index.html
@@ -88,20 +88,19 @@
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Under <br/> Construction</h1>
                             <h1 class="promo-block-title">Visit <br/> Soon</h1>
-                            <p class="promo-block-text">Enterprise Analyst Co-Op at Mccormick &amp; Company</p>
-                            <p class="promo-block-text">Graduate Student at the Univerity of Maryland Baltimore County</p>
+                            <p class="promo-block-text">Enterprise Analyst (Part Time) at Mccormick &amp; Company</p>
+                            <p class="promo-block-text">Computer Science Graduate Student at the Univerity of Maryland Baltimore County</p>
                         </div>
                         <ul class="list-inline">
+                            <li><a href="https://www.linkedin.com/in/hshantanu/" target="_blank" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                             <li><a href="https://github.com/hshantanu" target="_blank" class="social-icons"><i class="icon-social-github"></i></a></li>
                             <li><a href="https://www.facebook.com/2hshantanu" target="_blank" class="social-icons"><i class="icon-social-facebook"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-dribbble"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-behance"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://www.instagram.com/hshantanu/" target="_blank" class="social-icons"><i class="icon-social-instagram"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/mockup/avatar-01.png" align="Avatar">
+                            <img class="promo-block-img img-responsive" src="img/mockup/Shantanu.jpg" align="Avatar">
                         </div>
                     </div>
                 </div>
@@ -123,10 +122,12 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>I'm Alisa Portman, orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>I am a Computer Science gradutate student at the University of Maryland, Baltimore County.
+                                    Also, I am working part time with McCormick &amp; Company in their IT department. My work is focused in the area of Data Engineering, Data Science, and Machine Learning.</p>
+                                    <p>I enjoy working in the areas of Cybersecurity and Machine Learning.</p>
+                                    <p>In my free time I like to play the guitar, swim, and watch movies. </p>
                                 </div>
-                                <a href="#" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Download my CV</a>
+                                <a href="https://drive.google.com/file/d/0B8aLWzCIyvi3TXVSMEZ6LXBwYWs/view?usp=sharing" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Resume</a>
                             </div>
                         </div>
 
@@ -158,6 +159,62 @@
         </div>
         <!-- End About -->
 
+         <!-- Work -->
+        <div id="work">
+            <div class="container content-lg">
+                <div class="row margin-b-40">
+                    <div class="col-sm-6">
+                        <h2>Latest Products</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                    </div>
+                </div>
+                <!--// end row -->
+
+                <div class="row">
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
+                            </div>
+                        </div>
+                        <h4><a href="#">Astute- McCormick</a> <span class="text-uppercase margin-l-20">Data Engineering</span></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <a class="link" href="#">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
+                            </div>
+                        </div>
+                        <h4><a href="#">XSS Attacks - Mithi</a> <span class="text-uppercase margin-l-20">Software Development &amp; Web Security</span></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <a class="link" href="#">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
+                            </div>
+                        </div>
+                        <h4><a href="#">Malcrawl - UMBC</a> <span class="text-uppercase margin-l-20">Machine Learning &amp; Cyber Security</span></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <a class="link" href="#">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+                </div>
+                <!--// end row -->
+            </div>
+        </div>
+        <!-- End Work -->
+
         <!-- Experience -->
         <div id="experience">
             <div class="bg-color-sky-light" data-auto-height="true">
@@ -166,11 +223,11 @@
                         <div class="col-md-3 col-sm-6 md-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-element">
-                                    <i class="service-icon icon-mustache"></i>
+                                    <i class="service-icon icon-screen-desktop"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>Illustrator</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                    <h3>Enterprise Analyst / Data Engineer</h3>
+                                    <p class="margin-b-5"></p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
                             </div>
@@ -217,62 +274,6 @@
             </div>
         </div>
         <!-- End Experience -->
-
-        <!-- Work -->
-        <div id="work">
-            <div class="container content-lg">
-                <div class="row margin-b-40">
-                    <div class="col-sm-6">
-                        <h2>Latest Products</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
-                    </div>
-                </div>
-                <!--// end row -->
-
-                <div class="row">
-                    <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <div class="margin-b-20">
-                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
-                            </div>
-                        </div>
-                        <h4><a href="#">Triangle Roof</a> <span class="text-uppercase margin-l-20">Management</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
-                    </div>
-                    <!-- End Latest Products -->
-
-                    <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <div class="margin-b-20">
-                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
-                            </div>
-                        </div>
-                        <h4><a href="#">Curved Corners</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
-                    </div>
-                    <!-- End Latest Products -->
-
-                    <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <div class="margin-b-20">
-                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
-                            </div>
-                        </div>
-                        <h4><a href="#">Bird On Green</a> <span class="text-uppercase margin-l-20">Design</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
-                    </div>
-                    <!-- End Latest Products -->
-                </div>
-                <!--// end row -->
-            </div>
-        </div>
-        <!-- End Work -->
 
         <!-- Clients -->
         <div class="bg-color-sky-light">
@@ -331,19 +332,19 @@
                     <div class="row">
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Location</h4>
-                            <a href="#">Brookyln, New York</a>
+                            <a href="https://en.wikipedia.org/wiki/Baltimore">Baltimore, Maryland, USA</a>
                         </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Phone</h4>
-                            <a href="#">+77 234 548 00 00</a>
+                            <a href="#">+1(240)230-2651</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Email</h4>
-                            <a href="mailto:#">alex.teseira@gmail.com</a>
+                            <a href="mailto:#">hs11@umbc.edu</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Web</h4>
-                            <a href="#">alex.teseira.com</a>
+                            <a href="hshantanu.github.io">hshantanu.github.io</a>
                         </div>
                     </div>
                     <!--// end row -->
