Updated the website and images.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Metronic "Acecv" Frontend Freebie</title>
+        <title>Shantanu Hirlekar - CS Grad student at UMBC</title>
+        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/UMBC_Retrievers_logo.svg/1104px-UMBC_Retrievers_logo.svg.png" type="image/png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta content="" name="description"/>
-        <meta content="" name="author"/>
+        <meta content="My Website" name="description"/>
+        <meta content="Shantanu Hirlekar" name="author"/>
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
@@ -115,7 +116,7 @@
             <div class="container content-lg">
                 <div class="row">
                     <div class="col-sm-5 sm-margin-b-60">
-                        <img class="full-width img-responsive" src="img/500x700/01.jpg" alt="Image">
+                        <img class="full-width img-responsive" src="img/500x700/Me.jpg" alt="Image">
                     </div>
                     <div class="col-sm-7">
                         <div class="section-seperator margin-b-50">
@@ -164,23 +165,24 @@
             <div class="container content-lg">
                 <div class="row margin-b-40">
                     <div class="col-sm-6">
-                        <h2>Latest Products</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                        <h2>Work Experience</h2>
+                        <p>I have worked in the fields of Software Development, Cyber Security, and Data Science. Some of my work can be found below. </p>
                     </div>
                 </div>
                 <!--// end row -->
 
                 <div class="row">
-                    <!-- Latest Products -->
+                     <!-- Latest Products -->
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="margin-b-20">
                             <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/01.jpg" alt="Latest Products Image">
+                                <img class="img-responsive" src="img/970x647/retrievers.jpg" alt="Latest Products Image">
                             </div>
                         </div>
-                        <h4><a href="#">Astute- McCormick</a> <span class="text-uppercase margin-l-20">Data Engineering</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
+                        <h4><a href="https://github.com/joyce8/MalCrawl/blob/master/MalCrawlWhitepaper.pdf" target="_blank">TA - UMBC</a> <span class="text-uppercase margin-l-20"><br>Graduate Teaching Assistant (AUG 2017 - Present)</span></h4><p>
+                        Teaching assistant at UMBC for the CMSC 626 and CMSC 426 courses. These courses focus on Computer Security and Cyber Security. CMSC 626 is a graduate breadth course at UMBC. 
+                        </p>
+                        <a class="link" href="http://cs.unc.edu/~haibin/course/fall17.html" target="_blank">Read More</a>
                     </div>
                     <!-- End Latest Products -->
 
@@ -188,12 +190,12 @@
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="margin-b-20">
                             <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/02.jpg" alt="Latest Products Image">
+                                <img class="img-responsive" src="img/970x647/McCormick.jpg" alt="Latest Products Image">
                             </div>
                         </div>
-                        <h4><a href="#">XSS Attacks - Mithi</a> <span class="text-uppercase margin-l-20">Software Development &amp; Web Security</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
+                        <h4><a href="https://www.mccormick.com/" target="_blank">Astute Project - McCormick</a> <span class="text-uppercase margin-l-20"><br>Data Engineering (Jun 17 - Present)</span></h4>
+                        <p>Work is around software development, data science, and machine learning. Working on a project to link the spread-out McCormick USA and Canada data of customer complaints, sales, supply chain, and QA together. Once all the data is together, it can be analyzed, various predictions can be made, and trends can be shown.</p>
+                        <a class="link" href="https://www.mccormick.com/" target="_blank">Read More</a>
                     </div>
                     <!-- End Latest Products -->
 
@@ -201,12 +203,25 @@
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="margin-b-20">
                             <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/03.jpg" alt="Latest Products Image">
+                                <img class="img-responsive" src="img/970x647/mithi.jpg" alt="Latest Products Image">
                             </div>
                         </div>
-                        <h4><a href="#">Malcrawl - UMBC</a> <span class="text-uppercase margin-l-20">Machine Learning &amp; Cyber Security</span></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
-                        <a class="link" href="#">Read More</a>
+                        <h4><a href="https://www.mithi.com/" target="_blank">XSS Attacks - Mithi Software</a> <span class="text-uppercase margin-l-20"><br>Software Development &amp; Web Security (Dec 2014 - May 2016)</span></h4>
+                        <p>Worked as a software developer for 1.5 years. Major project was in Cyber Security on the flagship product, ConnectXF. This included writing new code at various levels to make sure ConnectXF is free from cross-Site-Scripting attacks and other vulnerabilities. Updated code in open source components such Jabbered to sanitize the data. These changes were reflected in the ConnectXF version of 3.24.</p>
+                        <a class="link" href="https://www.mithi.com/" target="_blank">Read More</a>
+                    </div>
+                    <!-- End Latest Products -->
+
+                    <!-- Latest Products -->
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+                                <img class="img-responsive" src="img/970x647/retrievers.jpg" alt="Latest Products Image">
+                            </div>
+                        </div>
+                        <h4><a href="https://github.com/joyce8/MalCrawl/blob/master/MalCrawlWhitepaper.pdf" target="_blank">Malcrawl - UMBC</a> <span class="text-uppercase margin-l-20">Cyber Security &amp; Machine Learning (Spring 2017)</span></h4>
+                        <p>A project done with the Malware research group of the University of Maryland, Baltimore County. It is a Crawler to identify malicious source code on GitHub and other specified online repositories with the help of Machine Learning algorithms.</p>
+                        <a class="link" href="https://github.com/joyce8/MalCrawl/blob/master/MalCrawlWhitepaper.pdf" target="_blank">Read More</a>
                     </div>
                     <!-- End Latest Products -->
                 </div>
@@ -219,17 +234,18 @@
         <div id="experience">
             <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="container content-lg">
+                    <h2>My Education</h2>
                     <div class="row row-space-2 margin-b-4">
                         <div class="col-md-3 col-sm-6 md-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-element">
-                                    <i class="service-icon icon-screen-desktop"></i>
+                                    <i class="service-icon icon-graduation"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>Enterprise Analyst / Data Engineer</h3>
-                                    <p class="margin-b-5"></p>
+                                    <h3>Graduate Teaching Assistant at UMBC (AUG 2017 - Present)</h3>
+                                    <p class="margin-b-5">Teaching assistant at UMBC for the CMSC 626 and CMSC 426 courses. These courses focus on Computer Security and Cyber Security.</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="http://cs.unc.edu/~haibin/course/fall17.html" target="_blank" class="content-wrapper-link"></a>  
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 md-margin-b-4">
@@ -238,10 +254,10 @@
                                     <i class="service-icon color-white icon-screen-tablet"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3 class="color-white">Graphic Design</h3>
-                                    <p class="color-white margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                    <h3 class="color-white">Enterprise Analyst / Data Engineer (JUN 2017 - Present)</h3>
+                                    <p class="color-white margin-b-5">Working at McCormick &amp; Co in Hunt Valley, MD. Work is in Data Science, Machine Learning, and Software Development.</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="https://www.mccormick.com/" target="_blank" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 sm-margin-b-4">
@@ -324,7 +340,7 @@
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
                            <h2>Contact Me</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+                            <p>I am currently situated in Baltimore, MD. You can always email me for something interesting!</p>
                         </div>
                     </div>
                     <!--// end row -->
@@ -340,7 +356,8 @@
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Email</h4>
-                            <a href="mailto:#">hs11@umbc.edu</a>
+                            <a href="mailto:#">hs11@umbc.edu</a><br>
+                            <a href="mailto:#">2hshantanu@gmail.com</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Web</h4>
