Updated the info about education.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
             </div>
         </div>
         <!-- End About -->
-
          <!-- Work -->
         <div id="work">
             <div class="container content-lg">
@@ -179,7 +178,7 @@
                                 <img class="img-responsive" src="img/970x647/retrievers.jpg" alt="Latest Products Image">
                             </div>
                         </div>
-                        <h4><a href="https://github.com/joyce8/MalCrawl/blob/master/MalCrawlWhitepaper.pdf" target="_blank">TA - UMBC</a> <span class="text-uppercase margin-l-20"><br>Graduate Teaching Assistant (AUG 2017 - Present)</span></h4><p>
+                        <h4><a href="https://github.com/joyce8/MalCrawl/blob/master/MalCrawlWhitepaper.pdf" target="_blank">University of Maryland Baltimore County</a> <span class="text-uppercase margin-l-20"><br>Graduate Teaching Assistant (AUG 2017 - Present)</span></h4><p>
                         Teaching assistant at UMBC for the CMSC 626 and CMSC 426 courses. These courses focus on Computer Security and Cyber Security. CMSC 626 is a graduate breadth course at UMBC. 
                         </p>
                         <a class="link" href="http://cs.unc.edu/~haibin/course/fall17.html" target="_blank">Read More</a>
@@ -193,7 +192,7 @@
                                 <img class="img-responsive" src="img/970x647/McCormick.jpg" alt="Latest Products Image">
                             </div>
                         </div>
-                        <h4><a href="https://www.mccormick.com/" target="_blank">Astute Project - McCormick</a> <span class="text-uppercase margin-l-20"><br>Data Engineering (Jun 17 - Present)</span></h4>
+                        <h4><a href="https://www.mccormick.com/" target="_blank">McCormick &amp; Company</a> <span class="text-uppercase margin-l-20"><br>Data Engineering (Jun 17 - Present)</span></h4>
                         <p>Work is around software development, data science, and machine learning. Working on a project to link the spread-out McCormick USA and Canada data of customer complaints, sales, supply chain, and QA together. Once all the data is together, it can be analyzed, various predictions can be made, and trends can be shown.</p>
                         <a class="link" href="https://www.mccormick.com/" target="_blank">Read More</a>
                     </div>
@@ -206,24 +205,12 @@
                                 <img class="img-responsive" src="img/970x647/mithi.jpg" alt="Latest Products Image">
                             </div>
                         </div>
-                        <h4><a href="https://www.mithi.com/" target="_blank">XSS Attacks - Mithi Software</a> <span class="text-uppercase margin-l-20"><br>Software Development &amp; Web Security (Dec 2014 - May 2016)</span></h4>
+                        <h4><a href="https://www.mithi.com/" target="_blank">Mithi Software Technologies</a> <span class="text-uppercase margin-l-20"><br>Software Development &amp; Web Security (Dec 2014 - May 2016)</span></h4>
                         <p>Worked as a software developer for 1.5 years. Major project was in Cyber Security on the flagship product, ConnectXF. This included writing new code at various levels to make sure ConnectXF is free from cross-Site-Scripting attacks and other vulnerabilities. Updated code in open source components such Jabbered to sanitize the data. These changes were reflected in the ConnectXF version of 3.24.</p>
                         <a class="link" href="https://www.mithi.com/" target="_blank">Read More</a>
                     </div>
                     <!-- End Latest Products -->
 
-                    <!-- Latest Products -->
-                    <div class="col-sm-4 sm-margin-b-50">
-                        <div class="margin-b-20">
-                            <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
-                                <img class="img-responsive" src="img/970x647/retrievers.jpg" alt="Latest Products Image">
-                            </div>
-                        </div>
-                        <h4><a href="https://github.com/joyce8/MalCrawl/blob/master/MalCrawlWhitepaper.pdf" target="_blank">Malcrawl - UMBC</a> <span class="text-uppercase margin-l-20">Cyber Security &amp; Machine Learning (Spring 2017)</span></h4>
-                        <p>A project done with the Malware research group of the University of Maryland, Baltimore County. It is a Crawler to identify malicious source code on GitHub and other specified online repositories with the help of Machine Learning algorithms.</p>
-                        <a class="link" href="https://github.com/joyce8/MalCrawl/blob/master/MalCrawlWhitepaper.pdf" target="_blank">Read More</a>
-                    </div>
-                    <!-- End Latest Products -->
                 </div>
                 <!--// end row -->
             </div>
@@ -237,54 +224,41 @@
                     <h2>My Education</h2>
                     <div class="row row-space-2 margin-b-4">
                         <div class="col-md-3 col-sm-6 md-margin-b-4">
+                            <div class="service bg-color-base wow zoomIn" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service-element">
+                                    <i class="service-icon color-white icon-graduation"></i>
+                                </div>
+                                <div class="service-info">
+                                    <h3 class="color-white">University of Maryland Baltimore County, Baltimore MD, USA</h3>
+                                    <p class="color-white margin-b-5">MS in Computer Science. (AUG 2016 - MAY 2018)</p>
+                                </div>
+                                <a href="http://umbc.edu/" target="_blank" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 md-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-element">
                                     <i class="service-icon icon-graduation"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>Graduate Teaching Assistant at UMBC (AUG 2017 - Present)</h3>
-                                    <p class="margin-b-5">Teaching assistant at UMBC for the CMSC 626 and CMSC 426 courses. These courses focus on Computer Security and Cyber Security.</p>
+                                    <h3>University of Pune, Pune MH, India</h3>
+                                    <p class="margin-b-5">M.Sc. in Computer Science. (JUN 2013- JUN 2015)</p>
                                 </div>
-                                <a href="http://cs.unc.edu/~haibin/course/fall17.html" target="_blank" class="content-wrapper-link"></a>  
+                                <a href="http://www.unipune.ac.in/" target="_blank" class="content-wrapper-link"></a>  
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 md-margin-b-4">
-                            <div class="service bg-color-base wow zoomIn" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
-                                <div class="service-element">
-                                    <i class="service-icon color-white icon-screen-tablet"></i>
-                                </div>
-                                <div class="service-info">
-                                    <h3 class="color-white">Enterprise Analyst / Data Engineer (JUN 2017 - Present)</h3>
-                                    <p class="color-white margin-b-5">Working at McCormick &amp; Co in Hunt Valley, MD. Work is in Data Science, Machine Learning, and Software Development.</p>
-                                </div>
-                                <a href="https://www.mccormick.com/" target="_blank" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 sm-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-element">
-                                    <i class="service-icon icon-chemistry"></i>
+                                    <i class="service-icon icon-graduation"></i>
                                 </div>
                                 <div class="service-info">
-                                    <h3>Photoshop</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                    <h3>University of Pune, Pune MH, India</h3>
+                                    <p class="margin-b-5">B.Sc. in Computer Science. (JUN 2010 - APR 2013)</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="http://www.unipune.ac.in/" target="_blank" class="content-wrapper-link"></a>  
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service" data-height="height">
-                                <div class="service-element">
-                                    <i class="service-icon icon-badge"></i>
-                                </div>
-                                <div class="service-info">
-                                    <h3>Sketch</h3>
-                                    <p class="margin-b-5">Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
-                                </div>
-                                <a href="#" class="content-wrapper-link"></a>    
-                            </div>
-                        </div>
-                    </div>
                     <!--// end row -->
                 </div>
             </div>
